Dealt with all quality and tidiness isssues and saved into a csv

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -2120,7 +2120,7 @@
     "\n",
     "4. Incorrect ratings for some of the dogs\n",
     "\n",
-    "5. Incorrect data type for some of the columns like timestamp and created_at in gathered_tweet_df\n",
+    "5. Incorrect data type for some of the columns like timestamp\n",
     "\n",
     "``image_pred table``\n",
     "\n",
@@ -4714,13 +4714,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Test"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1770,
    "metadata": {},
@@ -4939,6 +4932,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1773,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 4172 entries, 4 to 5555\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column              Non-Null Count  Dtype              \n",
+      "---  ------              --------------  -----              \n",
+      " 0   tweet_id            4172 non-null   float64            \n",
+      " 1   timestamp           4172 non-null   datetime64[ns, UTC]\n",
+      " 2   text                4172 non-null   object             \n",
+      " 3   expanded_urls       4172 non-null   object             \n",
+      " 4   rating_numerator    4172 non-null   float64            \n",
+      " 5   rating_denominator  4172 non-null   float64            \n",
+      " 6   name                4172 non-null   object             \n",
+      " 7   dog_type            4172 non-null   object             \n",
+      " 8   jpg_url             4172 non-null   object             \n",
+      " 9   p1                  4172 non-null   category           \n",
+      " 10  p1_conf             4172 non-null   float64            \n",
+      " 11  p1_dog              4172 non-null   object             \n",
+      " 12  p2                  4172 non-null   category           \n",
+      " 13  p2_conf             4172 non-null   float64            \n",
+      " 14  p2_dog              4172 non-null   object             \n",
+      " 15  p3                  4172 non-null   category           \n",
+      " 16  p3_conf             4172 non-null   float64            \n",
+      " 17  p3_dog              4172 non-null   object             \n",
+      " 18  retweet_count       4172 non-null   object             \n",
+      " 19  favorite_count      4172 non-null   object             \n",
+      "dtypes: category(3), datetime64[ns, UTC](1), float64(6), object(10)\n",
+      "memory usage: 631.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Integer values for tweet id\n",
+    "- ratings should int64\n",
+    "- dog_type should be a category\n",
+    "- retweets and favorite counts should be int64"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4948,7 +4994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1772,
    "metadata": {},
    "outputs": [],
    "source": [
