Deleted some files

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -2882,7 +2882,7 @@
    "source": [
     "#### Define:\n",
     "- Find the names that are not correct by using value count\n",
-    "- Replace incorrect names and None values with NaN"
+    "- Remove invalid names"
    ]
   },
   {
@@ -2890,17 +2890,6 @@
    "metadata": {},
    "source": [
     "#### Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 665,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # First, remove all tweets that don't contain any of the dog words\n",
-    "# for word in dogitionary:\n",
-    "#     tweet_archive_copy = tweet_archive_copy[tweet_archive_copy['text'].str.contains(word)]\n"
    ]
   },
   {
